--- a/src/main/resources/templates/clients.html
+++ b/src/main/resources/templates/clients.html
@@ -14,5 +14,22 @@
     </a>
 </ul>
 
+<h2>Ajout d'un client:</h2>
+<form method="POST" action="clients">
+    <label for="companyName">Entreprise:</label><input type="text" name="companyName" id="companyName">
+    <label for="firstName">Nom:</label><input type="text" name="firstName" id="firstName">
+    <label for="lastName">Prenom:</label><input type="text" name="lastName" id="lastName">
+    <label for="email">Email:</label><input type="text" name="email" id="email">
+    <label for="phone">Numero de tel:</label><input type="text" name="phone" id="phone">
+    <label for="address">Adresse:</label><input type="text" name="address" id="address">
+    <label for="zipCode">Zip Code:</label><input type="text" name="zipCode" id="zipCode">
+    <label for="city">Ville:</label><input type="text" name="city" id="city">
+    <label for="country">Pays:</label><input type="text" name="country" id="country">
+    <select name="state">
+        <option value="ACTIVE">ACTIVE</option>
+        <option value="INACTIVE">INACTIVE</option>
+    </select>
+    <input type="submit" value="Ajouter">
+</form>
 </body>
 </html>
